--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^5.0.0",
+    "@stripe/stripe-js": "^8.0.0",
     "@tailwindcss/vite": "^4.1.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.9.3",
     "tailwindcss": "^4.1.13"
   },
